--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Sex Ed Issues</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,8 +54,6 @@
             Simnikiwe Buhlungu<br>
             Martijn de Heer 
 				  </h3>
-          <div class="colophon-img">
-          <!-- <img src="content/MajaYara.jpg"> -->
           </div>
         </div>
      </div>
@@ -95,6 +94,7 @@
 					Simnikiwe Buhlungu<br>
 					Martijn de Heer 
 				</h3>
+      </div>
       </div>
     </div>
   </div>
