--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Sex Ed Issues</title>
+  <!-- meta tags, fill them with website meta infos -->
+		<meta name="description" content="Description of your web page" /> 
+		<meta name="keywords" content="Keyword 1, Keyword 2, Keyword 3, Keyword 4, Keyword 5 ..."/> 
+		<meta name="author" content="Name of the author/owner of the webpage's content" />
+
+		<!-- favicon, fill with a 512x512px .png image named 'favicon.png' -->
+		<link rel="icon" href="assets/images/favicon/star.png"/>
+
+		<!-- website title, visible in the browser window and on link sharing -->
+		<title>Sex Ed Issues</title>
+
+
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
