--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <!-- meta tags, fill them with website meta infos -->
-		<meta name="description" content="Description of your web page" /> 
-		<meta name="keywords" content="Keyword 1, Keyword 2, Keyword 3, Keyword 4, Keyword 5 ..."/> 
-		<meta name="author" content="Name of the author/owner of the webpage's content" />
+		<meta name="description" content="Sex Ed Issues meetings aim to add what is missing in sex education—through workshops and discussions—for anyone who wants to keep learning. The zines are the result and documentation of the events that extend and open up the conversations to others. For most of us, sex education has been limited and ended before it stopped being a giggle-worthy topic. Now that we are older, if we do happen to talk about sex its often about our experiences rather than the subject itself. More often than not we don’t share the more intimate, taboo, or painful truths." /> 
+		<meta name="keywords" content="sex eduaction, graduation project, graphic design, painful sex, the pill"/> 
+		<meta name="author" content="Maja Bielawska and Yara Fransen" />
 
 		<!-- favicon, fill with a 512x512px .png image named 'favicon.png' -->
 		<link rel="icon" href="assets/images/favicon/star.png"/>
